# bookshop-management-system

./: CMakeLists.txt  README.md  main.cpp
include/: books.h  config.h  purchases.h  suppliers.h  utils.h
src/: books.cpp  config.cpp  purchases.cpp  suppliers.cpp  utils.cpp
